--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class"welcome-buttons">
       <h1>Car Listings:</h1>
       <div class="buttons">
-        <button type="button" class="myButton1" onclick="move()">Type1</button>
+        <button type="button" class="myButton1" onclick="move1()">Type1</button>
         <button type="button" class="myButton2" onclick="move2()">Type2</button>
       </div>
       <p class="paragraph">
