change buttons to signify type of cars, car listings complete

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class"welcome-buttons">
       <h1>Car Listings:</h1>
       <div class="buttons">
-        <button type="button" class="myButton1" onclick="move1()">Type1</button>
-        <button type="button" class="myButton2" onclick="move2()">Type2</button>
+        <button type="button" class="myButton1" onclick="move1()">Tes Cars</button>
+        <button type="button" class="myButton2" onclick="move2()">Jag Cars</button>
       </div>
       <p class="paragraph">
         <image src="https://d17fnq9dkz9hgj.cloudfront.net/uploads/2012/11/152964589-welcome-home-new-cat-632x475.jpg"></image>
